[package]
name = "rust_json"
version = "0.1.0"
authors = ["Jernej Sila <jernej.sila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
reqwest = { version = "0.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }